Nov 06, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update docu

Nov 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add custom arguments for Death Ball UT2003 mod
- use case insensitive compare for password in ut&co

Oct 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move definition of PACKAGE_DATA_DIR to Makefile.am as recommended in autoconf
  docu

Oct 29, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- additional gametypes for RTCW and ET mods. Thanks Ben Winslow for
  the patch

Oct 28, 2003: Jordi Mallach <jordi@sindominio.net>
- move list of supported languages to po/LINGUAS.

Oct 26, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added kde flag icons
- new splash screen and desktop icons
- new directory layout

Oct 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- remove gettext stuff from repository. Instead autogen.sh will run
  gettextize to create the necessary files
- fix alpha threshold when rendering flag icons
- add GTK2 patch from Jochen Baier

Oct 23, 2003: Alex <alex_b@users.sourceforge.net>
- Replaced French translation with new fr.po from
  Michel Briand <michelbriand@free.fr>

Oct 22, 2003: Alex <alex_b@users.sourceforge.net>
- Updated Danish translation with diff file from
  Morten Brix Pedersen (again)

Oct 19, 2003: Alex <alex_b@users.sourceforge.net>
- Updated Danish translation with diff file from
  Morten Brix Pedersen

Oct 19, 2003: Jordi Mallach <jordi@sindominio.net>
- disable the QuakeForge HexenWorld master server while it gets fixed

Oct 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update german translation
- run msgfmt -c in po/updateonepo

Oct 16, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- display players on savage servers

Oct 14, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added some server listings from multiplay.co.uk, especially MOHAA. Thanks
  Steve Hartland of multiplay.co.uk for making this possible!
- wget uses XQF/version as user-agent now