@@ -70,14 +70,14 @@ Quake2<br>
 Quake3<br>
 Return to Castle Wolfenstein<br>
 Enemy Territory<br>
-Voyager Elite Force<br>
+Voyager Elite Force (wine)<br>
 Hexen2<br>
 HexenWorld<br>
 Sin<br>
-Half-Life<br>
+Half-Life (wine)<br>
 Kingpin<br>
 Soldier of Fortune<br>
-Soldier of Fortune 2<br>
+Soldier of Fortune 2 (wine)<br>
 Tribes 2<br>
 Heretic 2<br>
 Unreal Tournament<br>
@@ -88,13 +88,8 @@ Descent 3<br>
 Serious Sam: The First Encounter<br>
 Serious Sam: The Second Encounter<br>
 Medal of Honor: Allied Assault<br>
+Call of Duty (wine)<br>
 Savage<br>
-  <p>Other games that use the 'Gamespy' type master protocol such
-as<br>
-&nbsp;&nbsp;&nbsp; No one Lives Forever<br>
-&nbsp;&nbsp;&nbsp; Rally Masters<br>
-&nbsp;&nbsp;&nbsp; Turok 2<br>
-&nbsp;&nbsp;&nbsp; Shogo</p>
 </blockquote>
 Searching for games involves communicating with 'master servers' on
 the Internet which game servers advertise to on the Internet.&nbsp;
@@ -147,7 +142,8 @@ platforms.<br>
 <p>XQF can be downloaded as a pre-compiled binary for some
 distributions, or as source code. The source code can be downloaded
 as either a .tar.gz file, or via CVS.&nbsp; See the file section of <a
- href="http://www.linuxgames.com/xqf">http://www.linuxgames.com/xqf</a>for
+ href="http://www.linuxgames.com/xqf">http://www.linuxgames.com/xqf</a>
+for
 downloading instructions.<br>
 <br>
 </p>
@@ -715,6 +711,9 @@ the following games:<br>
         <li>Quake3</li>
         <li>Return to Castle Wolfenstein</li>
         <li>Enemy Territory</li>
+        <li>Medal of Honor</li>
+        <li>Call of Duty<br>
+        </li>
         <li>Half-Life</li>
         <li>Unreal Tournament</li>
         <li>Unreal Tournament 2003</li>
@@ -940,15 +939,12 @@ pushlatency setting.
           <b>Fixed value</b>
           <blockquote> Enter a value to be passed to Quakeworld </blockquote>
         </blockquote>
-        <b>Troubleshooting:</b>
+        <b>Troubleshooting:</b> special options for those who know what
+they mean ;-)
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Disable delta-compression (cl_nodelta)</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-??</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Disable delta-compression (cl_nodelta)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Disable player/entity prediction (cl_predict_players)</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-??</p>
       </blockquote>
     </blockquote>
     <blockquote> <b>Player Profile:</b> </blockquote>
@@ -989,15 +985,14 @@ rate setting.
           <p>Default is 2500.</p>
           <p>This is passed to Quakeworld/Quake2 as the 'noaim' switch.</p>
         </blockquote>
-        <b>Troubleshooting:</b>
+        <b>Troubleshooting:</b> special options for those who know what
+they mean ;-)
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Disable delta-compression (cl_nodelta)</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-??</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+Disable delta-compression
+(cl_nodelta)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Disable player/entity prediction (cl_predict_players)</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-??</p>
       </blockquote>
     </blockquote>
   </blockquote>
@@ -1461,7 +1456,7 @@ is looking.<br>
   <b><a name="SoF"></a>Soldier of Fortune (1.06):</b>
   <blockquote> Create a script in your sof directory called
 'startsof-xqf' that contains: ./sof +set console 1 +won_login
-username password $*
+username password "$@"
     <p>Replace username and password with your WoN username and password</p>
     <p>Make the script executable with: chmod +x startsof-xqf</p>
     <p>Under Preferences - Games, enter startsof-xqf for 'command line'
@@ -1570,6 +1565,12 @@ public Serious Sam master servers that work with QStat / XQF.<br>
 configuration
 file is required. XQF since version 0.9.13 installs a working one for
 you.<br>
+    <br>
+  </blockquote>
+  <b><a name="MOHAA"></a>Call of Duty:</b>
+  <blockquote> There is currently no native client for Call of Duty,
+you need wine to run it. You can find an installer at <a
+ href="http://www.kratz00.org/linux/installer.php?what=cod">http://www.kratz00.org/linux/installer.php?what=cod</a><br>
     <br>
   </blockquote>
   <b><a name="savage"></a>Savage:</b>
