@@ -71,6 +71,7 @@ extern	struct pixmap gamespy3d_pix;
 extern	struct pixmap ssam_pix;
 extern	struct pixmap mohaa_pix;
 extern	struct pixmap savage_pix;
+extern	struct pixmap cod_pix;
 
 extern	struct pixmap gplus_pix;
 extern	struct pixmap rminus_pix;
