@@ -1,3 +1,10 @@
+Nov 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- add support for Call of Duty (wine, no official master)
+- update docu
+- remove useless gamespy game listings
+- add note that the savage script has to be modified (needs translation)
+- update german translation
+
 Nov 06, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - update docu
 
